--- a/app/src/main/res/layout/fragment_showpicture.xml
+++ b/app/src/main/res/layout/fragment_showpicture.xml
@@ -3,11 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/picture"-->
+        <!--android:src="@drawable/ic_launcher_background"-->
+        <!--android:layout_centerInParent="true"/>-->
+
+    <com.example.yfsl.slidedowntocloseimage_demo.FriendCircleView_1
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/picture"
         android:src="@drawable/ic_launcher_background"
         android:layout_centerInParent="true"/>
+
+    <!--<com.example.yfsl.slidedowntocloseimage_demo.TouchImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/picture"-->
+        <!--android:src="@drawable/ic_launcher_background"-->
+        <!--android:layout_centerInParent="true"/>-->
 
 </RelativeLayout>
