完善功能  实现点击和下滑退出查看

--- a/app/src/main/res/layout/fragment_showpicture.xml
+++ b/app/src/main/res/layout/fragment_showpicture.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/fragment_rl">
 
     <!--<ImageView-->
         <!--android:layout_width="match_parent"-->
@@ -10,18 +11,12 @@
         <!--android:src="@drawable/ic_launcher_background"-->
         <!--android:layout_centerInParent="true"/>-->
 
-    <com.example.yfsl.slidedowntocloseimage_demo.FriendCircleView_1
+    <com.example.yfsl.slidedowntocloseimage_demo.FriendCircleView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/picture"
         android:src="@drawable/ic_launcher_background"
         android:layout_centerInParent="true"/>
 
-    <!--<com.example.yfsl.slidedowntocloseimage_demo.TouchImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:id="@+id/picture"-->
-        <!--android:src="@drawable/ic_launcher_background"-->
-        <!--android:layout_centerInParent="true"/>-->
 
 </RelativeLayout>
